# todo-notes-tracker

./: .copilot-instructions.md  .gitignore  CHANGELOG.md  CODE_REVIEW_ISSUES.md  NOTIFICATION_RESEARCH.md  README.md  RELEASE.md  TESTING.md  TESTING_TODO_EDITING.md  WORKFLOW_CHECKLIST.md  WORKFLOW_DIAGRAM.md  run-tests.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml  tests.yml  version-bump.yml
docs/: AUTOMATED_VERSIONING_PROPOSAL.md  CLEANUP_SUMMARY.md  DARK_MODE_FEATURE.md  DRAG_DROP_REORDER.md  FEATURE_BRANCH_SUMMARY.md  FEATURE_TODO_EDITING.md  POST_REBASE_VERIFICATION.md  PULL_REQUEST.md  README.md  RELEASE.md  RELEASE_WORKFLOW_IMPROVEMENTS.md  STANDARDS_COMPLIANCE_SUMMARY.md  TESTING_IMPLEMENTATION_SUMMARY.md
src-tauri/: .clippy.toml  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
ui/: drag-test.html  index.html  main.js  styles.css  test-mocks.js  test-runner.html  test-suite.js  test-utils.js  test.html
