[package]
name = "todo-notes-tracker"
version = "1.2.1"
description = "A bullet journal style todo app with pomodoro timer"
authors = ["djp928"]
license = "MIT"
repository = "https://github.com/djp928/todo-notes-tracker"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
